# Protocol_2.0

./: .gitignore  readme.md
certiificate/: certificate.crt
cpp/: CMakeLists.txt  CMakeSettings.json  access_control.hpp  asymetric_encoders.hpp  client.hpp  encoders.hpp  hashes.hpp  main.cpp  server.hpp  stuff.hpp
python/: Certificate_generator.py  private_key.pem  protocol_core.py
tests/: Ping_test.py  Universal_test.py  handshake_test.py  inner_channel_test.py  protocol_sender.py  pult.py  server.py  tst.py
